ref #33542: add s3 upload and handle multiple parts for local case